welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:3: error: not found: value nums
	var n=nums(0)
              ^maxValue:5: error: not found: value nums
	 for (i <- 1 to nums.length-1) {
                        ^